# vectors

./: .gitignore  README.md  Vectors.hs  stack.yaml  vectors.cabal
app/: Main.hs
src/: Dynamics.hs  Main.hs  Vectors.hs  Views.hs
test/: Spec.hs
